--- a/src/components/spacement/margin.scss
+++ b/src/components/spacement/margin.scss
@@ -1,29 +1,11 @@
 .#{$_margin_name} {
-    //Default sizing
-    @include margin_count();
+    @include media_all () using ($multiplier) {
+        $margin_count: $__margin_size * $multiplier;
 
-    //Calculate grid size based on screen size - extra small
-    &-#{$_extra_small_name} {
-        @include margin_size($__margin_size, $__margin_size * $__size_multiplier, $__margin_size * $__size_multiplier * 2, $__margin_size * $__size_multiplier * 3, $__margin_size * $__size_multiplier * 4);
-    }
-    
-    //Calculate grid size based on screen size - small
-    &-#{$_small_name} {
-        @include margin_size($__margin_size / $__size_multiplier, $__margin_size, $__margin_size * $__size_multiplier, $__margin_size * $__size_multiplier * 2, $__margin_size * $__size_multiplier * 3);
-    }
-    
-    //Calculate grid size based on screen size - medium
-    &-#{$_medium_name} {
-        @include margin_size($__margin_size / ($__size_multiplier * 2), $__margin_size / $__size_multiplier, $__margin_size, $__margin_size * $__size_multiplier, $__margin_size * $__size_multiplier * 2 );
-    }
-    
-    //Calculate grid size based on screen size - large
-    &-#{$_large_name} {
-        @include margin_size($__margin_size / ($__size_multiplier * 3), $__margin_size / ($__size_multiplier * 2), $__margin_size / $__size_multiplier, $__margin_size, $__margin_size * $__size_multiplier);
-    }
-    
-    //Calculate grid size based on screen size - extra large
-    &-#{$_extra_large_name} {
-        @include margin_size($__margin_size / ($__size_multiplier * 4), $__margin_size / ($__size_multiplier * 3), $__margin_size / ($__size_multiplier * 2), $__margin_size / $__size_multiplier, $__margin_size);
+        @for $c from 0 to $__loop_count {
+            &-#{$c} {
+                margin: $margin_count * $c !important;
+            }
+        }
     }
 }
