--- a/src/components/alignment/text.scss
+++ b/src/components/alignment/text.scss
@@ -1,34 +1,25 @@
 .#{$_text_name} {
-    // Left
-    &-#{$_left_name} {
-        text-align: left;
-    }
-
-    // Center
-    &-#{$_center_name} {
-        text-align: center;
-    }
-
-    // Right
-    &-#{$_right_name} {
-        text-align: right;
-    }
-
     // Media cases
-    @include media {
+    @include media_all ("static") using ($multiplier) {
         // Left
         &-#{$_left_name} {
             text-align: left;
+            display: flex;
+            justify-content: left;
         }
-    
+        
         // Center
         &-#{$_center_name} {
             text-align: center;
+            display: flex;
+            justify-content: center;
         }
-    
+        
         // Right
         &-#{$_right_name} {
             text-align: right;
+            display: flex;
+            justify-content: right;
         }
     }
 }
