--- a/src/components/buttons/index.scss
+++ b/src/components/buttons/index.scss
@@ -1,9 +1,14 @@
 // Main button structure
 [class*=#{$_button_name}] {
-    padding: 10px 20px;
+    padding: 10px 20px !important;
     position: relative;
     transition: all .2s;
     margin: get_var("__margin_size");
+
+    // Content positioning
+    display: flex;
+    align-content: center;
+    justify-content: center;
 
     // Fix problem due to indexing
     &:before {
