--- a/src/custom/naming.scss
+++ b/src/custom/naming.scss
@@ -61,10 +61,17 @@ $_fullscreen_name:          "fullscreen"    !default;
 $_sample_name:              "sample"        !default;
 $_line_name:                "line"          !default;
 $_all_name:                 "all"           !default;
+$_image_name:               "img"           !default;
+$_interactive_name:         "interactive"   !default;
+$_context_name:             "context"       !default;
+$_body_name:                "body"          !default;
+
+// Stars
 $_star_name:                "star"          !default;
 $_starfield_name:           "starfield"     !default;
+
+// Animation
 $_float_name:               "float"         !default;
-$_image_name:               "img"           !default;
 $_twinkle_name:             "twinkle"       !default;
 
 // Form
