--- a/src/components/animations/twinkle.scss
+++ b/src/components/animations/twinkle.scss
@@ -4,21 +4,21 @@
 
 @keyframes twinkle {
     0% {
-    	transform: scale(1, 1);
-    	background: rgba(255,255,255,0.0);
+		transform: scale(1, 1);
+		opacity: 0;
     	animation-timing-function: ease-in;
     }
     60% {
-    	transform: scale(0.8, 0.8);
-    	background: rgba(255,255,255,1);
+		transform: scale(0.8, 0.8);
+		opacity: 1;
     	animation-timing-function: ease-out;
     }
     80% {
-    	background: rgba(255,255,255,0.00);
+		opacity: 0;
     	transform: scale(1, 1);
     }
     100% {
-    	background: rgba(255,255,255,0.0);
+		opacity: 0;
     	transform: scale(1, 1);
     }
 }
