--- a/src/components/colors/image.scss
+++ b/src/components/colors/image.scss
@@ -18,7 +18,7 @@
 }
 
 //General fix
-[class*=#{$_image_name}][class*=#{$_button_name}] {
+[class*=#{$_image_name}] {
     > * {
         position: relative;
     }
