--- a/src/components/form/checkbox.scss
+++ b/src/components/form/checkbox.scss
@@ -23,7 +23,7 @@
             display: inline-block;
             width: calc(#{get_var("__font_normal_size")} / 2);
             height: calc(#{get_var("__font_normal_size")} / 2);
-            padding: calc(#{get_var("__padding_size")} * 2);
+            padding: calc(#{get_var("__padding_size")});
             border: 2px solid get_var("primary_color");
             float: right;
             margin-left: get_var("__font_normal_size");
@@ -39,7 +39,7 @@
             background: get_var("primary_color");
             width: calc(#{get_var("__font_normal_size")} / 2 - 4px);
             height: calc(#{get_var("__font_normal_size")} / 2 - 4px);
-            padding: calc((#{get_var("__padding_size")} * 2));
+            padding: calc((#{get_var("__padding_size")}));
             margin: 4px;
             opacity: 0;
             transition: all .2s;
