--- a/src/components/form/input.scss
+++ b/src/components/form/input.scss
@@ -6,22 +6,22 @@
 
     // Control margin
     &:not(:last-child) {
-        margin-bottom: calc(#{get_var("__margin_size")} * 4);
+        margin-bottom: calc(#{get_var("__margin_size")} * 2);
     }
 
     // Label
     label {
         width: 100%;
         padding: get_var("__padding_size");
-        margin-left: calc(#{get_var("__margin_size")} * 2);
-        margin-bottom: calc(#{get_var("__margin_size")} * 2);
+        margin-left: calc(#{get_var("__margin_size")});
+        margin-bottom: calc(#{get_var("__margin_size")});
     }
 
     // Input
     input.#{$_form_name}-#{$_input_name} {
         &[type=text],&:not([type]) {
             width: 100%;
-            padding: calc(#{get_var("__padding_size")} * 4);
+            padding: calc(#{get_var("__padding_size")});
             border: 2px solid get_var("primary_color");
             background: transparent;
             transition: all .2s;
