--- a/src/components/form/select.scss
+++ b/src/components/form/select.scss
@@ -4,23 +4,10 @@
     flex-wrap: wrap;
     width: 100%;
 
-    // Control margin
-    &:not(:last-child) {
-        margin-bottom: calc(#{get_var("__margin_size")} * 4);
-    }
-
-    // Label
-    label {
-        width: 100%;
-        padding: get_var("__padding_size");
-        margin-left: calc(#{get_var("__margin_size")} * 2);
-        margin-bottom: calc(#{get_var("__margin_size")} * 2);
-    }
-
     // Input
     select.#{$_form_name}-#{$_input_name} {
         width: 100%;
-        padding: calc(#{get_var("__padding_size")} * 4);
+        padding: calc(#{get_var("__padding_size")});
         border: 2px solid get_var("primary_color");
         background: none;
 
